--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,11 @@
     margin: 0px;
     padding: 0%;
 }
+
+body
+{
+    width: 400px;
+    height: 600px;
+    background-color: rgb(10, 10, 63);
+    color: antiquewhite;
+}
