--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body
     height: 200px;
     border-color: rgb(18, 88, 168);
     margin: 5px;
+    overflow: hidden;
 }
 .input-image-box input 
 {
@@ -31,9 +32,19 @@ body
     height: 100%;
     color: antiquewhite;
     word-break: keep-all;
+  
 }
 .btn-box
 {
-
+width: 100%;
+height: 100px;
+}
+.btn-box button {
+    width: 90%;
+    background-color: rgb(18, 88, 168);
+    color: antiquewhite;
+    font-size: xx-large;
+    border-radius: 10px;
+    margin: 20px;
 }
 .result{}
